--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 *.exe
 /go/pi-zero/pi-zero
 /python/venv
-.venv/
+.venv
 /python/edgeAuth/device_did.txt
 /go/pi-zero/sampleapp-darwin
 /go/pi-zero/sampleapp-linux
+.venv/
+device_did.txt
