--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,15 @@
 /go/pi-zero/pi-zero
 /python/venv
 .venv
-/python/edgeAuth/device_did.txt
+
 /go/pi-zero/sampleapp-darwin
 /go/pi-zero/sampleapp-linux
 .venv/
 device_did.txt
+
+# Python generated files and directories
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
